--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
                         <a class="nav-link" aria-current="page" href="#adopt">Adopt</a>
                       </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Partner</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
+                        <a class="nav-link" aria-current="page" href="#info">About</a>
                     </li>
                 </ul>
             </div>
@@ -118,7 +115,7 @@
 
 
         <!-- Start of INFO SECT -->
-        <section class="info-section">
+        <section class="info-section" id="info">
             <div class="info-header d-flex justify-content-center">
                 <h1 class="fs-2 pt-5">How Furever Friends Work</h1>
             </div>
@@ -170,16 +167,21 @@
         </section>
         <!-- End of INFO SECT -->
 
-        <!-- End of MAIL SECT -->
-        <section class="mail-section">
-            <div class="mail-ribbon bg-warning d-flex justify-content-center align-items-center" style="height: 13rem;">
-                <div class="input-group m-3" style="width: 70%; height: 2rem;">
-                    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        <!-- Start of Footer -->
+        <footer>
+            <section class="mail-section">
+                <div class="mail-ribbon bg-warning d-flex justify-content-center align-items-center" style="height: 13rem; flex-direction: column;">
+                    <div class="mail-header">
+                        <h4 fs-1>Join our Newsletter!</h4>
+                    </div>
+                    <div class="input-group m-3" style="width: 70%; height: 2rem;">
+                        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Mail</button>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <!-- End of MAIL SECT -->
+            </section>
+        </footer>
+        <!-- End of Footer -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
